cassandra/3.1/modules/ROOT/pages/cassandra-connector-reference.adoc
= Cassandra Connector Reference - Mule 4
:page-aliases: connectors::cassandra/cassandra-connector-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Cassandra Connector v3.1

Anypoint Connector for Cassandra (Cassandra Connector) implements the DataStax Java Driver for Apache Cassandra 3.1.

Release Notes: xref:release-notes::connector/cassandra-connector-release-notes-mule-4.adoc[Cassandra Connector Release Notes]

== Configurations
---
[[config]]
=== Config


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Name | String | The name for this configuration. Connectors reference the configuration with this name. | |x
| Connection a| Connection
| The connection types that can be provided to this configuration. | |x
| Expiration Policy a| ExpirationPolicy |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. The runtime purges instances as needed. |  |
|===

== Connection Types
[[config_connection]]

=== Connection


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Host a| String |  Host name or IP address |  localhost |
| Port a| String |  Port (default is 9042) |  9042 |
| Keyspace a| String |  Cassandra keyspace |   |
| Cluster Name a| String |  Cassandra cluster name |  |
| Cluster Nodes a| String | Cassandra cluster nodes are supported. These addresses are the IP or host address and port  number separated by comma. Format: `host1:port1, host2:port2`, for example: `127.0.0.1:9160, 127.0.0.2:9160`. If the port is not specified, the default 9042 is used. When you specify this parameter, the host and port from general settings are ignored. |  |
| Username a| String |  |   |
| Password a| String |  The password to use for authentication. If the password is null or white spaces only, the connector doesn't use authentication and the username must also be empty. |  |
| Protocol Version a| Enumeration, one of:

** V1
** V2
** V3
** V4 |  Version of the native protocol supported by the driver. |  |
| Max Schema Agreement Wait Seconds a| Number |  The maximum time to wait for schema agreement before returning from a DDL query. |  0 |
| Compression a| Enumeration, one of:

** NONE
** SNAPPY
** LZ4 |  The compression to use for the transport. |  |
| SSL a| Boolean |  Enables the use of SSL for the cluster. |  false |
| Reconnection a| Reconnection |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

=== Associated Operations

* addNewColumn
* changeColumnType
* createKeyspace
* createTable
* deleteColumnsValue
* deleteRows
* dropColumn
* dropKeyspace
* dropTable
* executeCQLQuery
* getTableNamesFromKeyspace
* insert
* renameColumn
* select
* update


== Operations

[[addNewColumn]]
== Add New Column

`<cassandra-db:add-new-column>`

Adds a new column.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Table a| String |  The name of the table to use for the operation. |  |x
| Keyspace Name a| String |  (optional) The keyspace that contains the table to use. |  |
| Alter Column Input a| AlterColumnInput |  POJO defining the name of the new column and its DataType |  `#[payload]` |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations

* config

=== Throws

* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CassandraException
* CASSANDRA-DB:CassandraExecution
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_FAILED
* CASSANDRA-DB:OPERATION_NOT_APPLIED
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:QUERY_EXECUTION
* CASSANDRA-DB:QUERY_VALIDATION
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNKNOWN
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT


[[changeColumnType]]
== Change Column Type

`<cassandra-db:change-column-type>`

Changes the type of a column.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Table a| String |  The name of the table to use for the operation. |  |x
| Keyspace Name a| String |  (optional) The keyspace that contains the table to use. |  |
| Alter Column Input a| AlterColumnInput |  POJO defining the name of the column to be changed and the new DataType. |  `#[payload]` |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations

* config

=== Throws

* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CassandraException
* CASSANDRA-DB:CassandraExecution
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_FAILED
* CASSANDRA-DB:OPERATION_NOT_APPLIED
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:QUERY_EXECUTION
* CASSANDRA-DB:QUERY_VALIDATION
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNKNOWN
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT


[[createKeyspace]]
== Create Keyspace

`<cassandra-db:create-keyspace>`

Creates a new keyspace.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Input a| CreateKeyspaceInput |  Operation input containing the keyspace name and the replication details. |  `#[payload]` |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===

=== For Configurations

* config

=== Throws

* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CassandraException
* CASSANDRA-DB:CassandraExecution
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_FAILED
* CASSANDRA-DB:OPERATION_NOT_APPLIED
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:QUERY_EXECUTION
* CASSANDRA-DB:QUERY_VALIDATION
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNKNOWN
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT


[[createTable]]
== Create Table

`<cassandra-db:create-table>`

Creates a table(column family) in a specific keyspace. If no keyspace is specified, the keyspace used for login is used.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Create Table Input a| CreateTableInput |  Describes the table name, the keyspace name, and the list of columns. |  `#[payload]` |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===

=== For Configurations

* config

=== Throws

* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CassandraException
* CASSANDRA-DB:CassandraExecution
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_FAILED
* CASSANDRA-DB:OPERATION_NOT_APPLIED
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:QUERY_EXECUTION
* CASSANDRA-DB:QUERY_VALIDATION
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNKNOWN
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT


[[deleteColumnsValue]]
== Delete Columns Value

`<cassandra-db:delete-columns-value>`

Deletes values from an object specified by the where clause.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Table a| String |  The name of the table. |  |x
| Keyspace Name a| String |  (optional) The keyspace that contains the table to use. |  |
| Entities a| Array of String |  Operation input: Columns to delete. |  |x
| Where Clause a| Object |  |  `#[payload]` |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===

=== For Configurations

* config

=== Throws

* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CassandraException
* CASSANDRA-DB:CassandraExecution
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_FAILED
* CASSANDRA-DB:OPERATION_NOT_APPLIED
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:QUERY_EXECUTION
* CASSANDRA-DB:QUERY_VALIDATION
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNKNOWN
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT


[[deleteRows]]
== Delete Rows

`<cassandra-db:delete-rows>`

Deletes an entire record.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Table a| String |  The name of the table. |  |x
| Keyspace Name a| String |  (optional) The keyspace that contains the table to use. |  |
| Where Clause a| Object |  Operation input: the where clause for the delete operation. |  `#[payload]` |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===

=== For Configurations

* config

=== Throws

* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CassandraException
* CASSANDRA-DB:CassandraExecution
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_FAILED
* CASSANDRA-DB:OPERATION_NOT_APPLIED
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:QUERY_EXECUTION
* CASSANDRA-DB:QUERY_VALIDATION
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNKNOWN
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT


[[dropColumn]]
== Drop Column

`<cassandra-db:drop-column>`

Removes a column.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Table a| String |  The name of the table to use for the operation. |  |x
| Keyspace Name a| String |  (optional) The keyspace that contains the table to use. |  |
| Column Name a| String |  The name of the column to remove. |  `#[payload]` |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===

=== For Configurations

* config

=== Throws

* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CassandraException
* CASSANDRA-DB:CassandraExecution
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_FAILED
* CASSANDRA-DB:OPERATION_NOT_APPLIED
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:QUERY_EXECUTION
* CASSANDRA-DB:QUERY_VALIDATION
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNKNOWN
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT


[[dropKeyspace]]
== Drop Keyspace

`<cassandra-db:drop-keyspace>`

Drops the entire keyspace.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Keyspace Name a| String |  The name of the keyspace to drop. |  `#[payload]` |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===

=== For Configurations

* config

=== Throws

* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CassandraException
* CASSANDRA-DB:CassandraExecution
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_FAILED
* CASSANDRA-DB:OPERATION_NOT_APPLIED
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:QUERY_EXECUTION
* CASSANDRA-DB:QUERY_VALIDATION
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNKNOWN
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT


[[dropTable]]
== Drop Table

`<cassandra-db:drop-table>`

Drops an entire table from the specified keyspace, or from the keyspace used for login if none is specified as an operation parameter.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Table Name a| String |  The name of the table to drop. |  `#[payload]` |
| Keyspace Name a| String |  (optional) The keyspace which contains the table to drop. |  |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===

=== For Configurations

* config

=== Throws

* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CassandraException
* CASSANDRA-DB:CassandraExecution
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_FAILED
* CASSANDRA-DB:OPERATION_NOT_APPLIED
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:QUERY_EXECUTION
* CASSANDRA-DB:QUERY_VALIDATION
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNKNOWN
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT


[[executeCQLQuery]]
== Execute CQL Query

`<cassandra-db:execute-cql-query>`

Executes the raw input query provided.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Cql Input a| CQLQueryInput |  Describes the parameterized query to execute along with the parameters. |  `#[payload]` |
| Target Variable a| String |  The name of a variable in which the output of the operation is stored. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The outcome of the expression is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%header%autowidth.spread]
|===
| Type a| Array of the Object.
|===

=== For Configurations

* config

=== Throws

* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CassandraException
* CASSANDRA-DB:CassandraExecution
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_FAILED
* CASSANDRA-DB:OPERATION_NOT_APPLIED
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:QUERY_EXECUTION
* CASSANDRA-DB:QUERY_VALIDATION
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNKNOWN
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT


[[getTableNamesFromKeyspace]]
== Get Table Names From Keyspace

`<cassandra-db:get-table-names-from-keyspace>`

Returns all the table names from the specified keyspace.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Keyspace Name a| String |  The name of the keyspace to use in the operation. |  |
| Target Variable a| String |  The name of a variable in which the output of the operation is stored. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The outcome of the expression is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%header%autowidth.spread]
|===
| Type a| Array of String
|===

=== For Configurations

* config

=== Throws

* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CassandraException
* CASSANDRA-DB:CassandraExecution
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_FAILED
* CASSANDRA-DB:OPERATION_NOT_APPLIED
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:QUERY_EXECUTION
* CASSANDRA-DB:QUERY_VALIDATION
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNKNOWN
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT


[[insert]]
== Insert

`<cassandra-db:insert>`

Executes the insert entity operation.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Table a| String |  The table name in which the entity is inserted. |  |x
| Keyspace Name a| String |  (optional) The keyspace that contains the table to use. |  |
| Entity To Insert a| Object |  The entity to insert. |  `#[payload]` |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===

=== For Configurations

* config

=== Throws

* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CassandraException
* CASSANDRA-DB:CassandraExecution
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_FAILED
* CASSANDRA-DB:OPERATION_NOT_APPLIED
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:QUERY_EXECUTION
* CASSANDRA-DB:QUERY_VALIDATION
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNKNOWN
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT


[[renameColumn]]
== Rename Column

`<cassandra-db:rename-column>`

Renames a column.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Table a| String |  The name of the table to use for the operation. |  |x
| Keyspace Name a| String |  (optional) The keyspace that contains the table to use. |  |
| Old Column Name a| String |  The name of the column to change. |  `#[payload]` |
| New Column Name a| String |  The new value for the name of the column. |  |x
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===

=== For Configurations

* config

=== Throws

* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CassandraException
* CASSANDRA-DB:CassandraExecution
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_FAILED
* CASSANDRA-DB:OPERATION_NOT_APPLIED
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:QUERY_EXECUTION
* CASSANDRA-DB:QUERY_VALIDATION
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNKNOWN
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT


[[select]]
== Select

`<cassandra-db:select>`

Executes a select query.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Query a| String |  The query to execute. |  `#[payload]` |
| Parameters a| Array of Any |  The query parameters |  |
| Target Variable a| String |  The name of a variable in which the output of the operation is stored. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The outcome of the expression is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%header%autowidth.spread]
|===
| Type a| Array of the Object.
|===

=== For Configurations

* config

=== Throws

* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CassandraException
* CASSANDRA-DB:CassandraExecution
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_FAILED
* CASSANDRA-DB:OPERATION_NOT_APPLIED
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:QUERY_EXECUTION
* CASSANDRA-DB:QUERY_VALIDATION
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNKNOWN
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT


[[update]]
== Update

`<cassandra-db:update>`

Executes the update entity operation.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Table a| String |  The table name in which the entity is updated. |  |x
| Keyspace Name a| String |  (optional) The keyspace which contains the table to drop. |  |
| Entity To Update a| Object |  The entity to update. |  `#[payload]` |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations

* config

=== Throws

* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CassandraException
* CASSANDRA-DB:CassandraExecution
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_FAILED
* CASSANDRA-DB:OPERATION_NOT_APPLIED
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:QUERY_EXECUTION
* CASSANDRA-DB:QUERY_VALIDATION
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNKNOWN
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT



== Types
[[Reconnection]]

=== Reconnection

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * reconnect
* reconnect-forever | The reconnection strategy to use |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds). | |
| Count a| Number | The number of reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

* DAYS
* HOURS
* MICROSECONDS
* MILLISECONDS
* MINUTES
* NANOSECONDS
* SECONDS
| A time unit that qualifies the `maxIdleTime` attribute. |  |
|===

[[AlterColumnInput]]

=== Alter Column Input

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Column a| String |  |  |
| Type a| Enumeration, one of:

* ASCII
* BIGINT
* BLOB
* BOOLEAN
* COUNTER
* DATE
* DECIMAL
* DOUBLE
* FLOAT
* INET
* INT
* SMALLINT
* TEXT
* TIME
* TIMESTAMP
* TIMEUUID
* TINYINT
* UUID
* VARCHAR
* VARINT
|  |  |
|===

[[CreateKeyspaceInput]]

=== Create Keyspace Input

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| First Data Center a| DataCenter |  |  |
| Keyspace Name a| String |  |  |
| Next Data Center a| DataCenter |  |  |
| Replication Factor a| Number |  |  |
| Replication Strategy Class a| Enumeration, one of:

* SimpleStrategy
* NetworkTopologyStrategy |  |  |
|===

[[DataCenter]]
=== Data Center

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Name a| String |  |  |
| Value a| Number |  |  |
|===

[[CreateTableInput]]
=== Create Table Input

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Columns a| Array of ColumnInput |  |  |
| Keyspace Name a| String |  |  |
| Table Name a| String |  |  |
|===

[[ColumnInput]]
=== Column Input

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Name a| String |  |  |
| Primary Key a| Boolean |  |  |
| Type a| Enumeration, one of:

* ASCII
* BIGINT
* BLOB
* BOOLEAN
* COUNTER
* DATE
* DECIMAL
* DOUBLE
* FLOAT
* INET
* INT
* SMALLINT
* TEXT
* TIME
* TIMESTAMP
* TIMEUUID
* TINYINT
* UUID
* VARCHAR
* VARINT
|  |  |
|===

[[CQLQueryInput]]
=== CQL Query Input

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Cql Query a| String |  |  |
| Parameters a| Array of Any |  |  |
|===

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
